nomenclature become happy with OS X

--- a/notations.tex
+++ b/notations.tex
@@ -1,10 +1,9 @@
-%% -*- coding:utf-8 -*-
+% -*- coding:utf-8 -*-
 \renewcommand{\nomname}{Notations}
 \nomenclature{$\forall$}{for all}
 \nomenclature{$\exists$}{exists}
-\nomenclature{$\exists"!$}{exists exactly one}
-\nomenclature{$\Ima{f}$}{\mynameref{def:function_image} of the
-  function $f$}
+%\nomenclature{\(\exists"!\)}{exists exactly one}
+\nomenclature{$\Ima{f}$}{\mynameref{def:function_image} of the function $f$}
 \nomenclature{$\cat{Set}$}{\mynameref{def:setcategory}}
 \nomenclature{$\cat{Rel}$}{\mynameref{def:relcategory}}
 \nomenclature{$\cat{Proof}$}{\mynameref{def:proof_category}}
@@ -14,8 +13,8 @@
 \nomenclature{$\cat{C\texttt{++}}$}{\mynameref{def:cppcategory}}
 \nomenclature{$\cat{Cat}$}{\mynameref{def:catcategory}}
 \nomenclature{$a, b$}{\mynameref{def:object}s (Latin small letters)}
-\nomenclature{$f, g, h$}{\mynameref{def:morphism} (\mynameref{def:arrow}) (Latin small
-  letter)}
+\nomenclature{$f, g, h$}{\mynameref{def:morphism}
+  (\mynameref{def:arrow}) (Latin small letter)}
 \nomenclature{$a \times b$}{\mynameref{def:product}}
 \nomenclature{$a \oplus b$}{\mynameref{def:sum}}
 \nomenclature{$f: a \to b$}{\mynameref{def:morphism} (simple arrow)}
@@ -71,9 +70,9 @@
 \nomenclature{$\catcovhom{C}{a}$}{\mynameref{def:cov_hom_functor}}
 \nomenclature{$\catconhom{C}{a}$}{\mynameref{def:con_hom_functor}}
 %% https://tex.stackexchange.com/questions/31562/nomencl-package-and-vertical-bar
-\nomenclature{$"|A"|$ }{\mynameref{def:cardinality} of a
+\nomenclature{$\lvert A \rvert$ }{\mynameref{def:cardinality} of a
   \mynameref{def:set} $A$} 
-\nomenclature{$curry(f)$ }{\mynameref{def:currying}} 
+\nomenclature{$curry(f)$ }{\mynameref{def:currying_set}} 
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
