limits: typemistake fixed

--- a/limits.tex
+++ b/limits.tex
@@ -100,7 +100,7 @@ Category $\cat{I}$ in the \cref{def:diagram_of_shape} is called
   \label{fig:cone}
 \end{figure}
 Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{I}$ in $\cat{C}$.
-A \textit{cone} to $F$ is an object $d \in \catob{C}$ with
+A \textit{cone} to $F$ is an object $c \in \catob{C}$ with
 \mynameref{def:morphism}s $f^{c} = \left\{f_i^{c}: c \to
 a_i^{(C)}\right\}$, where $a_i^{(C)} = F(a_i^{(I)})$ 
 indexed by objects from 
