Introduction was updated

--- a/introduction.tex
+++ b/introduction.tex
@@ -3,16 +3,16 @@
 
 You just looked at yet another introduction to Category Theory. The
 subject mostly consists of a lot of definitions that are related each
-others and we wrote the book to collect all of them in one
+others. We wrote the book to collect all the definitions in one
 place to be easy checked and updated in future when we decide to refresh
 our knowledge about the field of math. Therefore the book was written mostly
 for our category theory studying purposes but we will appreciate if
 somebody else find it useful. 
 
-The topics(chapters) cover the base definitions
+The topics(chapters) cover base definitions
 (\mynameref{def:object}, \mynameref{def:morphism} and
-\mynameref{def:category}), \mynameref{def:functor},
-\mynameref{def:nt}, \mynameref{def:monad} and also include important
+\mynameref{def:category}) as well as more advanced ones (\mynameref{def:functor},
+\mynameref{def:nt}, \mynameref{def:monad}) and also include important
 results from the category theory such as Yoneda's lemma (see
 \cref{sec:yoneda}) and Curry-Howard-Lambek correspondence (see
 \cref{sec:curry_howard_lambek}). The \cref{sec:topos} gives an
@@ -23,7 +23,7 @@ There are a lot of examples in each chapter. The examples cover
 different category 
 theory application areas. We assume that the reader is familiar with
 the corresponding area and the example(s) can be passed if not. I.e.
-anyone can choose the suitable example(s) for (s)he. 
+anyone can choose suitable example(s) for him/her. 
 
 The most important examples are related to the set theory. The set
 theory and category theory are very close related. Each one can be
@@ -39,7 +39,7 @@ examples (Haskell, C\texttt{++}, Scala) can be found on github repositories:
 \end{itemize}
 
 The examples from physics are related to quantum mechanics that is the
-most known for me. For the examples We were inspired by the Bob Coecke
+most known for us. For the examples we were inspired by the Bob Coecke
 article \cite{bib:arxiv:Bob_Coecke_2008}.
 
 There is also additional material related to abstract algebra (see
