more notes about set therory

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -611,6 +611,18 @@ connects our usual knowledge about sets with the category theory.
   small letters: $a \in A$.
 \end{definition}
 
+\begin{remark}[Set]
+  \label{rem:set}
+  The definition of \mynameref{def:set} was given
+  above is incomplete. There are several additional axioms should be
+  applied for the complete definition. Different sets of axioms can be
+  used. In our case we consider so called \textit{Zermelo—Fraenkel set theory
+  with the axiom of Choice} or \textit{ZFC} \cite{wiki:zfc}. The
+  system of axioms allows us to avoid different logical paradoxes of
+  the set theory, for instance well known Russell's
+  paradox \cite{wiki:russell_paradox}.
+\end{remark}
+
 \begin{definition}[Cardinality]
 \label{def:cardinality}
 The number of elements in the \mynameref{def:set} $A$ is called
@@ -701,8 +713,9 @@ The number of elements in the \mynameref{def:set} $A$ is called
   of all sets. But the result is inconsistent because famous Russell's
   paradox \cite{wiki:russell_paradox} can be applied. To avoid such
   situations we consider a limitation that is applied on our
-  construction, for instance 
-  ZFC \cite{wiki:zfc}. If we apply the limitation we have that set of
+  construction as it was mentioned at \cref{rem:set}, especially  
+  ZFC \cite{wiki:zfc} is applied. If we take into consideration the
+  limitation then we have a set of
   all sets is not a set itself and as result the  $\cat{Set}$
   category is a \mynameref{def:large_category}
   \index{Category!large}
