--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1034,10 +1034,10 @@ the \mynameref{def:discrete_category}.
 \section{Programming languages examples}
 \label{sec:plcategory_example}
 Functions are the most important
-constructions in programming languages. They allow to convert elements 
+constructions in programming languages. They convert elements 
 \footnote{
-We consider variables as the elements in Scala, C\texttt{++} and 
-CAF (Constant applicative form) as the elements in Haskell
+We consider variables as the elements in Scala and C\texttt{++}.  
+CAF (Constant applicative form) is considered as the elements in Haskell
 } of one type into elements of another one. 
 
 \begin{definition}[Pure function]
