--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1037,7 +1037,7 @@ Functions are the most important
 constructions in programming languages. They convert elements 
 \footnote{
 We consider variables as the elements in Scala and C\texttt{++}.  
-CAF (Constant applicative form) is considered as the elements in Haskell
+Constant applicative forms (CAF) are considered as the elements in Haskell
 } of one type into elements of another one. 
 
 \begin{definition}[Pure function]
