--- a/curryhoward.tex
+++ b/curryhoward.tex
@@ -204,25 +204,26 @@ corresponding range $\Delta q_{1,2}$ (see \cref{fig:heisenberg}).
   \centering
   \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
           width=.8pt,inner sep=1pt}]
-      \node[ele,label=left:$0$] (a) at (0,0) {};
-      \node[ele,label=above:$\frac{\hbar}{3 \Delta p}$] (b) at (2,0) {};
-      \node[ele,label=right:$\frac{2 \hbar}{3 \Delta p}$] (c) at (4,0) {};
+      \node[ele,label=below:$0$] (a) at (0,0) {};
+      \node[ele,label=below:$q_1$] (b) at (2,0) {};
+      \node[ele,label=below:$q_2$] (c) at (4,0) {};
       \draw[-,thick,shorten <=2pt,shorten >=2pt] (a) to node[above]
            {$\Delta q_1$} (b);
       \draw[-,thick,shorten <=2pt,shorten >=2pt] (b) to node[above]
            {$\Delta q_2$} (c);  
   \end{tikzpicture}
-  \caption{Heisenberg inequality. The event $P$ is that momentum has
-    uncertainty $\Delta p$ Event $P \land Q_1$ is that particle's
-    position is between $0$ and $\frac{\hbar}{3 \Delta p}$. Event
-    $P \land Q_2$ is that particle's
-    position is between $\frac{\hbar}{3 \Delta p}$ and
-    $\frac{2\hbar}{3 \Delta p}$. Particle's position for event $P
-    \land Q = (P \land Q_1)
-    \lor (P \land Q_2)$ is between $0$ and $\frac{2\hbar}{3 \Delta p}$. The
-    events $P \land Q_1$ and $P \land Q_2$ are forbidden by the Heisenberg
-    inequality. From other side the event $P \land Q = (P \land Q_1)
-    \lor (P \land Q_2)$ is possible}   
+  \caption{Heisenberg inequality. The particle position can be in the
+    following ranges: $\left[0, q_1\right]$ (uncertainty is $\Delta
+    q_1$), $\left[q_1, q_2\right]$ (uncertainty is $\Delta
+    q_2 = \Delta q_1$) or $\left[0, q_2\right]$ (uncertainty is $\Delta
+    q = \Delta q_1 + \Delta q_2 = 2 \Delta q_1$). We assume that
+    momentum uncertainty is defined as $\Delta p = \frac{\hbar}{2
+      \Delta q_1}$. Thus we have $\Delta p \Delta q_1 = \Delta p
+    \Delta q_1 = \frac{\hbar}{3} < \frac{\hbar}{2}$ and therefore the particle
+    cannot be localised neither inside $\left[0, q_1\right]$ or
+    $\left[q_1, q_2\right]$. From other side $\Delta p \Delta q = 2
+    \Delta p \Delta q_1 = \frac{2 \hbar}{3} > \frac{\hbar}{2}$ and
+    as result the particle can be localized at interval $\left[0, q_2\right]$}   
   \label{fig:heisenberg}
 \end{figure}
 
@@ -230,7 +231,8 @@ Heisenberg inequality says
 \[
 \Delta p \Delta q_{1,2} \geq \frac{\hbar}{2}
 \]
-i.e. the following 2 events $P\land Q_{1,2}$ are not forbidden:
+i.e. the following 2 events $P\land Q_{1,2}$ are forbidden as soon as
+(see \cref{fig:heisenberg}):
 \[
 \Delta p \Delta q_1 = \frac{\hbar}{3}
 \]
@@ -243,7 +245,7 @@ i.e.
 P \land Q_1 = P \land Q_2 = \mbox{False}
 \]
 from other side the event $P \land (Q_1 \lor Q_2)$ can be
-$\mbox{True}$ as soon as
+$\mbox{True}$ as soon as (see  \cref{fig:heisenberg})
 \[
 \Delta p (\Delta q_1 + \Delta q_2) = \frac{2\hbar}{3} >
 \frac{\hbar}{2}.
