quantum categorical approach

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1836,13 +1836,13 @@ We can rewrite the principle as follows
 \end{eqnarray}
 that leads to \eqref{eq:lagrange_mechanics}. Therefore the same motion
 equation can be used using global approach (via integral over all
-possible trajectories). or in other words the ``telescope'' was used
+possible trajectories) or in other words the ``telescope'' was used
 there. 
 
 \begin{remark}[Universal property][Mechanics]
 \label{rem:universalpropertymechanics}
 The principle of least action can be treated as an universal property
-that will allow to pick up one object (trajectory there) among the set
+that will allow to pick up one object (trajectory) among the set
 of the similar objects. The same universal properties will appear
 during the book in a lot of places.
 \end{remark}
